# http.nvim

./: .gitignore  LICENSE  README.md  flake.nix  rust-toolchain
crates/http-nvim/: Cargo.toml
crates/http-nvim/src/: lib.rs
lua/http/: init.lua  lib.lua  notify.lua  util.lua
