[package]
edition = "2021"
name = "http-nvim"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jonathan.dickinson.id>"]
license = "MIT"
keywords = ["editor", "nvim", "lua"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
os_pipe = "1.1"
mlua = { version = "0.8", features = ["luajit", "module", "serialize"] }
